--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<dependency>
+<dependency><test>
     <groupId>javax.servlet</groupId>
     <artifactId>javax.servlet-api</artifactId>
     <version>3.0.1</version>
